fixed z-index

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 24px;
+    font-size: 20px;
     font-family: Onest;
     scroll-behavior: smooth;
     transition: 1s;
@@ -32,7 +32,7 @@ html {
 
 h1 {
     font-size: 42px;
-    margin-top: 30px;
+    margin-top: 50px;
     font-family: Unbounded;
     text-transform: uppercase;
     line-height: 2.5rem;
